added show page with few content

--- a/index.html
+++ b/index.html
@@ -76,12 +76,14 @@
       <div class="celebrities my-4">
         <div class="card border-0 mx-2">
           <div class="card-body p-0 vertical-card">
-            <img src="images/aisha.jpeg" class="cover-image rounded-5 border border-1" alt="aisha">
+            <a href="show.html" target="blank">
+              <img src="images/aisha.jpeg" class="cover-image rounded-5 border border-1" alt="aisha">
+            </a>
           </div>
           <div>
-            <p class="fs-7"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
-            <p>LGBTQ History With Drag Performances</p>
-            <p><strong>From $25</strong> / person</p>
+            <p class="fs-7 my-0"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
+            <p class="my-1">LGBTQ History With Drag Performances</p>
+            <p class="my-1"><strong>From $25</strong> / person</p>
           </div>
         </div>
         <div class="card border-0 mx-2">
@@ -89,9 +91,9 @@
             <img src="images/rory.jpeg" class="cover-image rounded-5 border border-1" alt="rory">
           </div>
           <div>
-            <p class="fs-7"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
-            <p>LGBTQ History With Drag Performances</p>
-            <p><strong>From $25</strong> / person</p>
+            <p class="fs-7 my-0"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
+            <p class="my-1">Pride Dance Class W/ Drag Choreographer </p>
+            <p class="my-1"><strong>From $25</strong> / person</p>
           </div>
         </div>
         <div class="card border-0 mx-2">
@@ -99,9 +101,9 @@
             <img src="images/petz.jpeg" class="cover-image rounded-5 border border-1" alt="petz">
           </div>
           <div>
-            <p class="fs-7"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
-            <p>LGBTQ History With Drag Performances</p>
-            <p><strong>From $25</strong> / person</p>
+            <p class="fs-7 my-0"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . Thailand</span></p>
+            <p class="my-1">History and Culture of Transwoman-Thailand</p>
+            <p class="my-1"><strong>From $10</strong> / person</p>
           </div>
         </div>
         <div class="card border-0 mx-2">
@@ -109,9 +111,9 @@
             <img src="images/tye.jpeg" class="cover-image rounded-5 border border-1" alt="tye.jpeg">
           </div>
           <div>
-            <p class="fs-7"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
-            <p>LGBTQ History With Drag Performances</p>
-            <p><strong>From $25</strong> / person</p>
+            <p class="fs-7 my-0"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
+            <p class="my-1">LGBTQ History With Drag Performances</p>
+            <p class="my-1"><strong>From $25</strong> / person</p>
           </div>
         </div>
         <div class="card border-0 mx-2">
@@ -119,9 +121,9 @@
             <img src="images/kate.jpeg" class="cover-image rounded-5 border border-1" alt="kate.jpeg">
           </div>
           <div>
-            <p class="fs-7"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
-            <p>LGBTQ History With Drag Performances</p>
-            <p><strong>From $25</strong> / person</p>
+            <p class="fs-7 my-0"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
+            <p class="my-1">LGBTQ History With Drag Performances</p>
+            <p class="my-1"><strong>From $25</strong> / person</p>
           </div>
         </div>
         <div class="card border-0 mx-2">
@@ -129,9 +131,9 @@
             <img src="images/couple.jpg " class="cover-image rounded-5 border border-1" alt="couple.jpg">
           </div>
           <div>
-            <p class="fs-7"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
-            <p>LGBTQ History With Drag Performances</p>
-            <p><strong>From $25</strong> / person</p>
+            <p class="fs-7 my-0"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
+            <p class="my-1">LGBTQ History With Drag Performances</p>
+            <p class="my-1"><strong>From $25</strong> / person</p>
           </div>
         </div>
         <div class="card border-0 mx-2">
@@ -139,9 +141,9 @@
             <img src="images/aisha.jpeg" class="cover-image rounded-5 border border-1" alt="aisha">
           </div>
           <div>
-            <p class="fs-7"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
-            <p>LGBTQ History With Drag Performances</p>
-            <p><strong>From $25</strong> / person</p>
+            <p class="fs-7 my-0"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
+            <p class="my-1">LGBTQ History With Drag Performances</p>
+            <p class="my-1"><strong>From $25</strong> / person</p>
           </div>
         </div>
       </div>
@@ -154,9 +156,9 @@
             <img src="images/mathew.jpeg" class="cover-image rounded-5 border border-1" alt="mathew">
           </div>
           <div>
-            <p class="fs-7"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
-            <p>LGBTQ History With Drag Performances</p>
-            <p><strong>From $25</strong> / person</p>
+            <p class="fs-7 my-0"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
+            <p class="my-1">LGBTQ History With Drag Performances</p>
+            <p class="my-1"><strong>From $25</strong> / person</p>
           </div>
         </div>
 
@@ -165,9 +167,9 @@
             <img src="images/joana.jpg" class="cover-image rounded-5 border border-1" alt="joana.jpg">
           </div>
           <div>
-            <p class="fs-7"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
-            <p>LGBTQ History With Drag Performances</p>
-            <p><strong>From $25</strong> / person</p>
+            <p class="fs-7 my-0"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
+            <p class="my-1">LGBTQ History With Drag Performances</p>
+            <p class="my-1"><strong>From $25</strong> / person</p>
           </div>
         </div>
 
@@ -176,9 +178,9 @@
             <img src="images/ben.jpeg" class="cover-image rounded-5 border border-1" alt="ben.jpeg">
           </div>
           <div>
-            <p class="fs-7"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
-            <p>LGBTQ History With Drag Performances</p>
-            <p><strong>From $25</strong> / person</p>
+            <p class="fs-7 my-0"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
+            <p class="my-1">LGBTQ History With Drag Performances</p>
+            <p class="my-1"><strong>From $25</strong> / person</p>
           </div>
         </div>
 
@@ -187,9 +189,9 @@
             <img src="images/ricardo.jpg" class="cover-image rounded-5 border border-1" alt="ricardo">
           </div>
           <div>
-            <p class="fs-7"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
-            <p>LGBTQ History With Drag Performances</p>
-            <p><strong>From $25</strong> / person</p>
+            <p class="fs-7 my-0"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
+            <p class="my-1">LGBTQ History With Drag Performances</p>
+            <p class="my-1"><strong>From $25</strong> / person</p>
           </div>
         </div>
 
@@ -198,9 +200,9 @@
             <img src="https://a0.muscache.com/im/pictures/5cb34906-f8f8-497f-8d1c-8bd5686d1bcf.jpg?im_w=320" class="cover-image rounded-5 border border-1" alt="mathew">
           </div>
           <div>
-            <p class="fs-7"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
-            <p>LGBTQ History With Drag Performances</p>
-            <p><strong>From $25</strong> / person</p>
+            <p class="fs-7 my-0"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
+            <p class="my-1">LGBTQ History With Drag Performances</p>
+            <p class="my-1"><strong>From $25</strong> / person</p>
           </div>
         </div>
 
@@ -209,9 +211,9 @@
             <img src="images/david.jpeg" class="cover-image rounded-5 border border-1" alt="david">
           </div>
           <div>
-            <p class="fs-7"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
-            <p>LGBTQ History With Drag Performances</p>
-            <p><strong>From $25</strong> / person</p>
+            <p class="fs-7 my-0"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
+            <p class="my-1">LGBTQ History With Drag Performances</p>
+            <p class="my-1"><strong>From $25</strong> / person</p>
           </div>
         </div>
         <div class="card border-0 mx-2">
@@ -219,9 +221,9 @@
             <img src="images/justin.jpg" class="cover-image rounded-5 border border-1" alt="justin.jpg">
           </div>
           <div>
-            <p class="fs-7"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
-            <p>LGBTQ History With Drag Performances</p>
-            <p><strong>From $25</strong> / person</p>
+            <p class="fs-7 my-0"><i class="fas fa-star text-danger"></i>4.92 <span class="text-secondary">(64) . United States</span></p>
+            <p class="my-1">LGBTQ History With Drag Performances</p>
+            <p class="my-1"><strong>From $25</strong> / person</p>
           </div>
         </div>
       </div>
@@ -230,17 +232,18 @@
       <div class="starting">
         <div class="card mb-3 rounded-5 mx-2" style="max-width: 540px;">
           <div class="row g-0">
-            <div class="col p-3 pr-0">
+            <div class="col p-2 pr-0">
               <img src="https://a0.muscache.com/im/pictures/lombard/MtTemplate-1671058-media_library/original/0a24bf2a-3ae0-49a0-95ef-a2a94923c9ca.jpeg?im_w=320" class="img-fluid rounded-5 border border-1" alt="mark">
             </div>
             <div class="col-md-7 fs-7">
               <div class="card-body">
-                <h4 class="text-end"><i class="far fa-heart"></i></h4>
                 <small class="fs-7 my-1"><i class="fas fa-star text-danger"></i>4.92 <span class="text-muted">(64) . United States</span></small>
                 <p class="card-text my-1">Irish Village, History, Culture & Craic</p>
                 <p class="card-text my-1"><strong>From $18</strong> / person</p>
                 <button class="btn-outline  bg-white py-1">9:30 PM</button>
-                <button class="btn-outline bg-white py-1">11:00 PM</button>
+              </div>
+              <div class="card-img-overlay">
+                <h4 class="text-end"><i class="far fa-heart"></i></h4>
               </div>
             </div>
           </div>
@@ -248,17 +251,18 @@
 
         <div class="card mb-3 rounded-5 mx-2" style="max-width: 540px;">
           <div class="row g-0">
-            <div class="col p-3 pr-0">
-              <img src="https://a0.muscache.com/im/pictures/lombard/MtTemplate-1671058-media_library/original/0a24bf2a-3ae0-49a0-95ef-a2a94923c9ca.jpeg?im_w=320" class="img-fluid rounded-5 border border-1" alt="mark">
+            <div class="col p-2 pr-0">
+              <img src="https://a0.muscache.com/im/pictures/lombard/MtTemplate-1438610-active_media/original/2a01016d-7406-465d-aee0-43bafa2dd1bd.jpeg?im_w=1200" class="img-fluid rounded-5 border border-1" alt="mark">
             </div>
             <div class="col-md-7 fs-7">
               <div class="card-body">
-                <h4 class="text-end"><i class="far fa-heart"></i></h4>
                 <p class="fs-7 my-1"><i class="fas fa-star text-danger"></i>4.92 <span class="text-muted">(64) . United States</span></p>
                 <p class="card-text my-1">Irish Village, History, Culture & Craic</p>
                 <p class="card-text my-1"><strong>From $18</strong> / person</p>
                 <button class="btn-outline  bg-white py-1">9:30 PM</button>
-                <button class="btn-outline bg-white py-1">11:00 PM</button>
+              </div>
+              <div class="card-img-overlay">
+                <h4 class="text-end"><i class="far fa-heart"></i></h4>
               </div>
             </div>
           </div>
@@ -266,17 +270,19 @@
 
         <div class="card mb-3 rounded-5 mx-2" style="max-width: 540px;">
           <div class="row g-0">
-            <div class="col p-3 pr-0">
-              <img src="https://a0.muscache.com/im/pictures/lombard/MtTemplate-1671058-media_library/original/0a24bf2a-3ae0-49a0-95ef-a2a94923c9ca.jpeg?im_w=320" class="img-fluid rounded-5 border border-1" alt="mark">
+            <div class="col p-2 pr-0">
+              <img src="https://a0.muscache.com/im/pictures/lombard/MtTemplate-2437553-poster/original/3d056fae-b2a5-40be-b609-a2c7c3bf6f73.jpeg?im_w=320" class="img-fluid rounded-5 border border-1" alt="mark">
             </div>
             <div class="col-md-7 fs-7">
               <div class="card-body">
-                <h4 class="text-end"><i class="far fa-heart"></i></h4>
                 <p class="fs-7 my-1"><i class="fas fa-star text-danger"></i>4.92 <span class="text-muted">(64) . United States</span></p>
                 <p class="card-text my-1">Irish Village, History, Culture & Craic</p>
                 <p class="card-text my-1"><strong>From $18</strong> / person</p>
                 <button class="btn-outline  bg-white py-1">9:30 PM</button>
                 <button class="btn-outline bg-white py-1">11:00 PM</button>
+              </div>
+              <div class="card-img-overlay">
+                <h4 class="text-end"><i class="far fa-heart"></i></h4>
               </div>
             </div>
           </div>
