set navbar position

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           </ul>
-          <div class="d-flex fw-bold text-darkfw-bold text-dark">
-            <ul class="navbar-nav align-middle">
+          <div class="d-flex">
+            <ul class="navbar-nav align-middle fw-bold text-dark">
               <li class="nav-item px-1">
-                <a class="py-1 px-2 rounded-pill nav-link" href="">Become a host</a>
+                <a class="py-1 px-2 rounded-pill nav-link text-dark" href="">Become a host</a>
               </li>
               <li class="nav-item px-1 align-middle">
-                <a class="py-1 px-2 rounded-circle nav-link" href="" ><i class="fas fa-globe"></i></a>
+                <a class="py-1 px-2 rounded-circle nav-link text-dark" href="" ><i class="fas fa-globe"></i></a>
               </li>
               <li class="nav-item px-1">
-                <a class="py-1 px-2 rounded-pill nav-link" href=""><i class="fas fa-bars"></i> <i class="fas fa-user-circle"></i></a>
+                <a class="py-1 px-2 rounded-pill nav-link text-dark" href=""><i class="fas fa-bars"></i> <i class="fas fa-user-circle"></i></a>
               </li>
             </ul>
           </div>
